--- a/.github/workflows/trying.yml
+++ b/.github/workflows/trying.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           echo "Daily update: $(date -u)" >> daily-log.txt
           git add daily-log.txt
-          git config --global user.name "1-Nishanth-1"
-          git config --global user.email "nishanthrn1@gmail.com"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git commit -m "Daily update $(date -u)" || echo "Nothing to commit"
           git push
