--- a/.github/workflows/trying.yml
+++ b/.github/workflows/trying.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create report file
         run: date +%s > report.txt
-      - name: Commit report
+      - name: Commit report 23f2002133@ds.study.iitm.ac.in
         run: |
           git config --global user.name '1-Nishanth-1'
           git config --global user.email '1-Nishanth-1@users.noreply.github.com'
-          git commit -am "Automated report"
+          git add report.txt
+          git commit -m "Automated report"
           git push
