--- a/.github/workflows/trying.yml
+++ b/.github/workflows/trying.yml
@@ -14,10 +14,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create report file
         run: date +%s > report.txt
-      - name: Commit report 23f2002133@ds.study.iitm.ac.in
+      - name: Commit report
+        env:
+          PAT_TOKEN: ${{ secrets.AT }}
         run: |
           git config --global user.name '1-Nishanth-1'
           git config --global user.email '1-Nishanth-1@users.noreply.github.com'
           git add report.txt
           git commit -m "Automated report"
-          git push
+          git push https://1-Nishanth-1:${PAT_TOKEN}@github.com/1-Nishanth-1/trying-github-action.git HEAD:main
