--- a/.github/workflows/trying.yml
+++ b/.github/workflows/trying.yml
@@ -15,11 +15,9 @@ jobs:
       - name: Create report file
         run: date +%s > report.txt
       - name: Commit report
-        env:
-          PAT_TOKEN: ${{ secrets.AT }}
         run: |
-          git config --global user.name '1-Nishanth-1'
-          git config --global user.email '1-Nishanth-1@users.noreply.github.com'
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add report.txt
           git commit -m "Automated report"
-          git push https://1-Nishanth-1:${PAT_TOKEN}@github.com/1-Nishanth-1/trying-github-action.git HEAD:main
+          git push main
