--- a/.github/workflows/trying.yml
+++ b/.github/workflows/trying.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   report:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - name: Create report file
