--- a/.github/workflows/trying.yml
+++ b/.github/workflows/trying.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create report file
         run: date +%s > report.txt
-      - name: Commit report
+      - name: Commit report by 23f2002133@ds.study.iitm.ac.in
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
